--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@
     font-family: "allura";
     src: url("./assets/fonts/Allura-Regular.ttf");
 }
+
 @font-face{
     font-family: "PPEditNew";
     src: url("./assets/fonts/PPEditorialNew.otf");
+}
+
+@font-face{
+    font-family: "firaSans";
+    src: url("./assets/fonts/FiraSans-Book.ttf");
 }
